[project]
name = "able-harness-kit"
version = "0.1.0"
description = "Thin, backend-neutral agent-harness middlewares for LangChain / deepagents: loop guard, binary-read guard, tool-result budget."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Hanlin Li", email = "itseek@qq.com" }]
keywords = ["agents", "llm", "langchain", "deepagents", "agent-harness", "middleware", "loop-detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "langchain>=1.3,<2",
    "langchain-core>=1.3,<2",
    "langgraph>=1.0,<2",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/hanlinlibham/able-harness-kit"
Repository = "https://github.com/hanlinlibham/able-harness-kit"
Issues = "https://github.com/hanlinlibham/able-harness-kit/issues"

[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["able_harness_kit*"]

[tool.setuptools.package-data]
able_harness_kit = ["py.typed"]
